InternexDev_Sandbox/src/objects/Debtor__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Concentration__c</fullName>
        <formula>IF(OR(ISNULL(Concentration_Limit__c),ISBLANK(Concentration_Limit__c)),IF(Total_Eligible_AR__c==0,0,(Eligible_AR__c/Total_Eligible_AR__c)* Client_Account__r.Eligible_For_Funding_formula__c), Concentration_Limit__c * Client_Account__r.Eligible_For_Funding_formula__c)</formula>
        <inlineHelpText>Formula: Eligible for Funding of Client-Account * Concentration Limit</inlineHelpText>
        <label>Max Concentration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Debtor_Concentration__c</fullName>
        <formula>ROUND(IF(Client_Account__r.Eligible_For_Funding_formula__c !=0,(Eligible_For_Funding__c/Client_Account__r.Eligible_For_Funding_formula__c),0),5)</formula>
        <inlineHelpText>Formula : Debtor Eligible AR / Total Eligible AR (Client-Account)</inlineHelpText>
        <label>Actual Debtor Concentration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Adj_Risk_Score__c</fullName>
        <label>Adj Risk Score</label>
        <picklist>
            <picklistValues>
                <fullName>D1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D8</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Advance_Rate__c</fullName>
        <formula>(100 -(((Dilution__c *100)*2)+5))/100</formula>
        <inlineHelpText>Formula: (100 - ((Dilution*2) + 5))%</inlineHelpText>
        <label>Advance Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Borrowing_Base_Reserve__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Data Source: Grade or Portal</inlineHelpText>
        <label>Borrowing Base Reserve</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Transaction_Date__c</fullName>
        <label>Business Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientAccount_External_Foreign_Key__c</fullName>
        <description>Created for mapping Client account</description>
        <externalId>true</externalId>
        <label>ClientAccount External Foreign Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Account__c</fullName>
        <label>Client Account</label>
        <referenceTo>Client_Account__c</referenceTo>
        <relationshipLabel>Debtors</relationshipLabel>
        <relationshipName>Debtors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Client_Name_for_email_alert__c</fullName>
        <formula>Client_Account__r.Client__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Product_Counterparty_Uniqueness__c</fullName>
        <label>Client Product Counterparty Uniqueness</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Client_Product_Counterparty__c</fullName>
        <formula>Client_Account__r.Client_Account__c &amp; &apos;-&apos; &amp; Counterparty__r.Name</formula>
        <label>Client Product Counterparty</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Invoice_Amounts_12_months__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Closed Invoice Amounts (12 months)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Closed_Invoice_Amounts_1_months__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Closed Invoice Amounts (1 month)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Closed_Invoice_Amounts_3_months__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Closed Invoice Amounts (3 months)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Concentration_Limit__c</fullName>
        <inlineHelpText>Data Source: Grade or Portal</inlineHelpText>
        <label>Concentration Limit (%)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contact_Last_Name__c</fullName>
        <label>Contact Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <label>Contact Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contra_Balance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Contra Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CounterParty_External_Foreign_Key__c</fullName>
        <description>Created for mapping the counter party</description>
        <externalId>true</externalId>
        <label>CounterParty External Foreign Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Counterparty__c</fullName>
        <label>Debtor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Debtors</relationshipLabel>
        <relationshipName>Debtors</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Credit_Period__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Data Source: Grade or Portal</inlineHelpText>
        <label>Credit Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current__c</fullName>
        <label>Current</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DBA_Count_for_Grade__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DBA Count for Grade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DBA_Count_for_Portal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DBA Count for Portal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Beyond_Terms__c</fullName>
        <label>DBT (Paydex)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Debtor_Adjusted_AR__c</fullName>
        <formula>Eligible_For_Funding__c -(ROUND(IF(Actual_Debtor_Concentration__c &gt; Concentration_Limit__c,((Actual_Debtor_Concentration__c - Concentration_Limit__c)*Client_Account__r.Eligible_For_Funding_formula__c),0),5))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Eligible AR - Excess Concentration</inlineHelpText>
        <label>Debtor Adjusted AR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Debtor_Name__c</fullName>
        <formula>TRIM(UPPER(Counterparty__r.Name))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Debtor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debtor_Net_Eligible_AR__c</fullName>
        <formula>MIN(Debtor_Adjusted_AR__c,Eligible_AR__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Minimum(Debtor Adjusted AR, Eligible AR Limit)</inlineHelpText>
        <label>Debtor Net Eligible AR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Debtor_Status__c</fullName>
        <inlineHelpText>Data Source: Grade or Portal</inlineHelpText>
        <label>Debtor Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending Verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eligible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ineligible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirm New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Unconfirmed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dilution_Amount_12_Month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Dilution Amount (12 Month)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dilution_Amount_1_Month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Dilution Amount (1 Month)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dilution_Amount_3_Month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Dilution Amount (3 Month)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dilution_Rate_12_months__c</fullName>
        <formula>IF($Setup.BusinessTransactionDate__c.Business_Transaction_Date__c - DATEVALUE(CreatedDate) &gt;= 365, IF(Closed_Invoice_Amounts_12_months__c + Open_Invoice_Dilution_12_Months__c != 0,NULLVALUE((Dilution_Amount_12_Month__c/( Closed_Invoice_Amounts_12_months__c + Open_Invoice_Dilution_12_Months__c)),0),0),Dilution__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dilution Rate %(12 months)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Dilution_Rate_1_months__c</fullName>
        <formula>IF($Setup.BusinessTransactionDate__c.Business_Transaction_Date__c - DATEVALUE(CreatedDate) &gt;= 30, IF(Closed_Invoice_Amounts_1_months__c + Open_Invoice_Dilution_1_Months__c != 0,NULLVALUE((Dilution_Amount_1_Month__c/( Closed_Invoice_Amounts_1_months__c + Open_Invoice_Dilution_1_Months__c )),0),0),0)</formula>
        <label>Dilution Rate % (1 months)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Dilution_Rate_3_months__c</fullName>
        <formula>IF($Setup.BusinessTransactionDate__c.Business_Transaction_Date__c - DATEVALUE(CreatedDate) &gt;= 90, IF(Closed_Invoice_Amounts_3_months__c + Open_Invoice_Dilution_3_Months__c != 0,NULLVALUE((Dilution_Amount_3_Month__c/( Closed_Invoice_Amounts_3_months__c + Open_Invoice_Dilution_3_Months__c )),0),0),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dilution Rate % (3 months)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Dilution__c</fullName>
        <inlineHelpText>Data Source: Grade or Portal</inlineHelpText>
        <label>Dilution (%)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Eligible_AR__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Data Source: Grade or Portal</inlineHelpText>
        <label>Eligible AR Limit</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Eligible_For_Funding__c</fullName>
        <formula>MAX(0,ROUND((Invoice_Amount__c - Ineligibles_Amount_formula__c),6)- NULLVALUE(Contra_Balance__c, 0))</formula>
        <inlineHelpText>Formula: MAX(0, Invoice Amount - Ineligible Amount - Contra Balance)</inlineHelpText>
        <label>Eligible AR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Excess_Concentration__c</fullName>
        <formula>ROUND(IF(Actual_Debtor_Concentration__c &gt; Concentration_Limit__c,((Actual_Debtor_Concentration__c - Concentration_Limit__c)*Client_Account__r.Eligible_For_Funding_formula__c),0),5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: If Actual Debtor Concentration &gt; Debtor Concentration Limit then ((Actual Debtor Concentration - Debtor Concentration Limit)*Total Eligible AR(Client-Account) Else 0</inlineHelpText>
        <label>Excess Concentration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Flag_for_Debtor_Report__c</fullName>
        <formula>IF($Setup.BusinessTransactionDate__c.Business_Transaction_Date__c - $Setup.Configuration_for_the_Reports__c.Days_to_calculate_for_Debtor_Report__c &gt; DATEVALUE(CreatedDate) ,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flag for Debtor Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Floor_Suite__c</fullName>
        <label>Floor/Suite</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Limit__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Data Source: Grade or Portal</inlineHelpText>
        <label>Funding Limit</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Availability__c</fullName>
        <formula>ROUND( Advance_Rate__c * MIN(Eligible_For_Funding__c,Actual_Concentration__c),6)</formula>
        <inlineHelpText>Formula: Advance Rate * Minimum(Eligible For Funding, Max Concentration)</inlineHelpText>
        <label>Gross Availability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Industry_DBT__c</fullName>
        <label>Industry DBT (Paydex)</label>
        <picklist>
            <picklistValues>
                <fullName>Utilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accommodation and Food Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adm.,Support,Waste Mgmt,Remediation Serv</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agri., Forestry, Fishing and Hunting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arts, Entertainment, and Recreation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Educational Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance and Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Care and Social Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Services (except Public Admin.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prof. Scientific, and Techn. Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate Rental and Leasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Trade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation and Warehousing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesale Trade</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ineligibles_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Updated from trgonDebtor Trigger.</description>
        <inlineHelpText>Formula: Sum of Ineligibles Amount of All Debtors</inlineHelpText>
        <label>Ineligibles Amount1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ineligibles_Amount_formula__c</fullName>
        <description>Ineligibles Type 2 =  Sum of Balances of Invoices(if Created Date+Credit Period &gt; Global Transaction Date).
Invoice Derived Percentage = Sum of Balances of Invoices(if Created Date+90 &gt; Global Transaction Date) Divided by Sum of Balances of All Invoices.</description>
        <formula>MAX(Ineligibles_Type2__c, IF(Ineligibles_Derived_Percentage__c &gt;= $Setup.Ineligible_Percentage_Limit__c.Invoice_Limit__c,Invoice_Amount__c,0),Ineligibles_Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: MAX (sum of Ineligibles Type 2 ,IF(Invoice Derived Percentage&gt;=Global Invoice Limit,Invoice Amount,0 ),Ineligibles_Amount)</inlineHelpText>
        <label>Ineligibles Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ineligibles_Derived_Percentage__c</fullName>
        <formula>IF(Invoice_Amount__c != 0,ROUND(Ineligibles_Type1__c/Invoice_Amount__c,6),0)</formula>
        <inlineHelpText>Formula: Sum of Balances of Invoices(if Created Date+90 &lt; Global Transaction Date) Divided by Sum of Balances of All Invoices.</inlineHelpText>
        <label>Ineligibles Derived Percentage</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ineligibles_Type1__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Sum of Balances of All Invoices if (Invoice Created Date + 90) &gt; Global Transaction Date from Invoice AmountWriteOff Trigger.</description>
        <inlineHelpText>Formula: Sum of Balances of all Invoices if (Invoice Created Date+90) &gt; Global Transaction Date.</inlineHelpText>
        <label>Ineligibles Type1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ineligibles_Type2__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Sum of Balances of All Invoices if (Invoice Created Date + Credit Period) &gt; Global Transaction Date from Invoice AmountWriteOff Trigger.</description>
        <inlineHelpText>Formula: Sum of Balances of all Invoices if (Invoice Created Date+Credit Period) &gt; Global Transaction Date.</inlineHelpText>
        <label>Ineligibles Type2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount_Formula__c</fullName>
        <description>Created this field to avoid editing in page layout</description>
        <formula>Invoice_Amount__c</formula>
        <inlineHelpText>Formula : Sum of Balances of All Invoices</inlineHelpText>
        <label>Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Formula : Sum of Balances of All Invoices</inlineHelpText>
        <label>Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Count_Formula__c</fullName>
        <description>Created this field to Avoid Editing from Pagelayout</description>
        <formula>Invoice_Count__c</formula>
        <inlineHelpText>Formula: No of Invoices</inlineHelpText>
        <label>Invoice Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Count__c</fullName>
        <description>Updated from AmountWriteoff Trigger</description>
        <inlineHelpText>Formula: No of Invoices</inlineHelpText>
        <label>Invoice Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Count_for_Sending_Portal__c</fullName>
        <label>Invoice Count for Sending Portal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <label>Legal Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MP_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>MP External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Max_Credit_Period__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Data Source: Grade or Portal</inlineHelpText>
        <label>Max Credit Period</label>
        <precision>16</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Availability__c</fullName>
        <formula>IF((Debtor_Net_Eligible_AR__c*Advance_Rate__c)-Borrowing_Base_Reserve__c &lt; 0,0,(Debtor_Net_Eligible_AR__c*Advance_Rate__c)-Borrowing_Base_Reserve__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: (Debtor Net Eligible AR*(Advance Rate/100))-Borrowing Base Reserve</inlineHelpText>
        <label>Net Availability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Open_Invoice_Dilution_12_Months__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Open Invoice Dilution (12 Months)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Open_Invoice_Dilution_1_Months__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Open Invoice Dilution (1 Month)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Open_Invoice_Dilution_3_Months__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Open Invoice Dilution (3 Months)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Count_to_send_Portal_payments__c</fullName>
        <label>Payment Count to send Portal payments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Count_to_send_Transaction_Grid__c</fullName>
        <label>Payment Count to send Transaction Grid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Portal_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Portal External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <formula>$User.Profile_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QB_Customer__c</fullName>
        <label>QB Customer</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Score_Date__c</fullName>
        <label>Risk Score Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Risk_Score__c</fullName>
        <label>Risk Score</label>
        <picklist>
            <picklistValues>
                <fullName>D1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D8</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Send_to_Grade__c</fullName>
        <formula>IF(AND(ISPICKVAL(Debtor_Status__c,&apos;Pending&apos;),External_Id__c =&apos;&apos;),True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Send to Grade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_to_Portal__c</fullName>
        <formula>IF(AND(OR(ISPICKVAL(Debtor_Status__c,&apos;Eligible&apos;),ISPICKVAL(Debtor_Status__c,&apos;Ineligible&apos;)), Sync_with_Portal__c = False),True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Send to Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sum_of_Payments_Formula__c</fullName>
        <description>Created this field to avoid editing from Page layout</description>
        <formula>Sum_of_Payments__c</formula>
        <inlineHelpText>Formula: Sum of Payments of All Invoices</inlineHelpText>
        <label>Sum of Payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sum_of_Payments__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Update from the Transaction(amountWriteoff) Trigger</description>
        <inlineHelpText>Formula: Sum of payments of All Invoices</inlineHelpText>
        <label>Sum of Payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sync_with_Grade__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync with Grade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_with_Market_Place__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync with Market Place</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_with_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync with Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tomorrow_date__c</fullName>
        <formula>CreatedDate +1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tomorrow date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Eligible_AR__c</fullName>
        <formula>Client_Account__r.Eligible_For_Funding__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Client Account Eligible For Funding</inlineHelpText>
        <label>Client Account Eligible For Funding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X16_30__c</fullName>
        <label>16-30</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X1_15__c</fullName>
        <label>1-15</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X31_60__c</fullName>
        <label>31-60</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X90__c</fullName>
        <label>90+</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Debtor</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Counterparty__c</columns>
        <columns>NAME</columns>
        <columns>Client_Account__c</columns>
        <columns>Invoice_Amount_Formula__c</columns>
        <columns>Ineligibles_Amount_formula__c</columns>
        <columns>Eligible_For_Funding__c</columns>
        <columns>Gross_Availability__c</columns>
        <columns>Funding_Limit__c</columns>
        <columns>Net_Availability__c</columns>
        <columns>Invoice_Count_Formula__c</columns>
        <columns>Advance_Rate__c</columns>
        <columns>Dilution__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>External_Id__c</columns>
        <columns>Portal_External_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DA-{00000}</displayFormat>
        <label>Debtor Account</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Debtor Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Client_and_Debtor_should_not_be_equal</fullName>
        <active>true</active>
        <errorConditionFormula>Client_Account__r.Client__r.CounterParty__c == Counterparty__c</errorConditionFormula>
        <errorDisplayField>Counterparty__c</errorDisplayField>
        <errorMessage>Debtor and Client shouldn&apos;t be Equal.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_on_Contra_Balance</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(Contra_Balance__c)),Contra_Balance__c &lt; 0)</errorConditionFormula>
        <errorMessage>Contra Balance must be &gt;= 0</errorMessage>
    </validationRules>
</CustomObject>